--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="palindrome">Palindrome</string>
     <string name="check">Check</string>
     <string name="next">Next</string>
+    <string name="choose_user">Choose a User</string>
+    <string name="selected_username">Selected User Name</string>
 </resources>
